--- a/src/scss/_policies.scss
+++ b/src/scss/_policies.scss
@@ -8,6 +8,8 @@
 	border: 2px solid (utils.$dark-bg);
 	grid-template-rows: -0.8fr 1fr;
 	padding-top: 1.5rem;
+	max-width: 475px;
+	margin: auto;
 }
 h1.policies__title {
 	color: white;
@@ -29,8 +31,10 @@ h1.policies__title {
 	padding-top: 1rem;
 	padding-right: 1rem;
 	max-width: 60ch;
-	margin-inline: auto;
+
 	color: utils.$dark-bg;
+	margin: auto;
+	margin: 1rem;
 }
 .policies__text--emphasized {
 	color: utils.$light-accent;
